<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="492dp"
        android:layout_height="957dp"
        android:background="#FFFFFF"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">

                <View
                    android:id="@+id/your_view_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="424dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints="search"
                    android:background="@drawable/search_background"
                    android:drawableStart="@android:drawable/ic_menu_search"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/find_your_food"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="263dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="Good Day, Spartan!"
                    android:textColor="#FFBD1919"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="234dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/time_to_feast"
                    android:textColor="@color/black"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cart"
                android:layout_width="550dp"
                android:layout_height="661dp"
                android:background="#FAFAFA">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="326dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/stores"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.109"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="426dp"
                    android:layout_height="592dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="132dp"
                    android:clipToPadding="false"
                    android:paddingStart="22dp"
                    android:paddingEnd="22dp"
                    android:paddingBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                </androidx.recyclerview.widget.RecyclerView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="495dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:layout_gravity="bottom"
            android:backgroundTint="#FFBD1919"
            app:fabCradleMargin="8dp"
            app:fabCradleRoundedCornerRadius="50dp"
            app:fabCradleVerticalOffset="10dp">

        </com.google.android.material.bottomappbar.BottomAppBar>
        <LinearLayout
            android:layout_width="460dp"
            android:layout_height="71dp"
            android:baselineAligned="false"
            app:layout_anchor="@+id/app_bar"
            app:layout_anchorGravity="center">

            <LinearLayout
                android:id="@+id/home"
                android:layout_width="400dp"
                android:layout_height="75dp"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/hom"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".8"
                    android:contentDescription="@string/home"
                    app:srcCompat="@drawable/ic_baseline_home_24"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/ho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hom"
                    android:textAlignment="center"
                    android:textColor="#F1BCBC"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/order"
                android:layout_width="400dp"
                android:layout_height="75dp"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/orde"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".8"
                    android:contentDescription="@string/order"
                    app:srcCompat="@drawable/staus"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/ord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order"
                    android:textAlignment="center"
                    android:textColor="#F1BCBC"
                    android:textSize="15sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/account"
                android:layout_width="400dp"
                android:layout_height="75dp"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/accoun"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".9"
                    android:contentDescription="@string/account"
                    app:srcCompat="@drawable/ic_baseline_equalizer_24"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Report"
                    android:textAlignment="center"
                    android:textColor="#F1BCBC"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>