<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CustomerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/your_view_id"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="2dp"
                android:autofillHints="search"
                android:background="@drawable/search_background"
                android:drawableStart="@android:drawable/ic_menu_search"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/find_your_food"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="@+id/your_view_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="70dp"
                android:layout_height="72dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="1dp"
                android:contentDescription="@string/profile"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.647"
                app:srcCompat="@drawable/ic_baseline_account_circle_24" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="sans-serif-condensed"
                android:text="Good Day, Spartan!"
                android:textColor="#FFBD1919"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="47dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/time_to_feast"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cart"
            android:layout_width="match_parent"
            android:layout_height="869dp"
            android:background="#FAFAFA"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            tools:layout_editor_absoluteX="-6dp">


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:fontFamily="sans-serif-black"
                android:text="MENU"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/stores"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:clipToPadding="false"
                android:paddingStart="22dp"
                android:paddingEnd="22dp"
                android:paddingBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.0">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewFood"
                android:layout_width="match_parent"
                android:layout_height="615dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintVertical_bias="0.833" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/cartshop"
                android:backgroundTint="#FFB1B1"
                app:borderWidth="4dp"
                android:contentDescription="@string/cart"
                android:elevation="3dp"
                android:src="@drawable/ic_baseline_shopping_cart_24"
                app:fabCustomSize="75dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.905"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.967"
                app:maxImageSize="45dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>