<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#E8D4D4"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="755dp"
        android:layout_height="1322dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67"
        app:srcCompat="@drawable/desktop_wallpaper_pink_peach_gradient_background_ultra_background_peach_pink_peach_plain" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:fontFamily="cursive"
        android:text="Food Spartan"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#090909"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="99dp"
        android:layout_height="117dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vecteezy_black_spoon_and_fork_icon_11459582_610" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="109dp"
        android:layout_height="104dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        app:srcCompat="@drawable/spartan" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:fontFamily="serif-monospace"
        android:text="REGISTRATION"
        android:textColor="#703232"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="430dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/material_dynamic_neutral_variant10"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="13dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColorHint="@color/material_dynamic_neutral_variant10"
        android:textColor="@color/material_dynamic_neutral_variant10"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/name"
        android:layout_width="430dp"
        android:layout_height="100dp"
        android:layout_marginTop="392dp"
        android:backgroundTint="@color/material_dynamic_neutral_variant10"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="13dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/full_name"
        android:singleLine="true"
        android:textColorHint="@color/material_dynamic_neutral_variant10"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/password"
        android:layout_width="430dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/material_dynamic_neutral_variant10"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="13dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@color/material_dynamic_neutral_variant10"
        android:textColor="@color/material_dynamic_neutral_variant10"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/register"
        android:layout_width="342dp"
        android:layout_height="95dp"
        android:layout_marginTop="50dp"
        android:text="Register"
        android:textColor="#FFFEFE"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.672" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/sign_in"
        android:textColor="#FFBD1919"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Already Registered ? "
        android:textColor="#101010"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.116" />
</androidx.constraintlayout.widget.ConstraintLayout>