<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="732dp"
        android:layout_height="1340dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504"
        app:srcCompat="@drawable/desktop_wallpaper_pink_peach_gradient_background_ultra_background_peach_pink_peach_plain" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="cursive"
        android:text="Food Spartan"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#050505"
        android:textSize="76sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="81dp"
        android:layout_height="104dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vecteezy_black_spoon_and_fork_icon_11459582_610" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="68dp"
        android:layout_height="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076"
        app:srcCompat="@drawable/spartan" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:fontFamily="serif-monospace"
        android:text="SIGNING IN"
        android:textColor="#703232"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="440dp"
        android:layout_height="89dp"
        android:layout_marginTop="428dp"
        android:backgroundTint="@color/material_dynamic_neutral_variant10"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="13dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColorHint="@color/material_dynamic_neutral_variant10"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/password"
        android:layout_width="447dp"
        android:layout_height="80dp"
        android:layout_marginTop="544dp"
        android:backgroundTint="@color/material_dynamic_neutral_variant10"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="13dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@color/material_dynamic_neutral_variant10"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/signup"
        android:layout_width="352dp"
        android:layout_height="89dp"
        android:layout_marginTop="50dp"
        android:text="@string/sign_in"
        android:textColor="#F8F8F8"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="68dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Don't have an account ? "
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/register"
        android:layout_width="161dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Register"
        android:textColor="#FFBD1919"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />

</androidx.constraintlayout.widget.ConstraintLayout>